# ring_buffer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_with_tests.sh  consumer.cpp  cpu_affinity.h  message_queue.h  producer.cpp  ring_buffer.cpp  ring_buffer.h  ring_buffer_c.cpp  ring_buffer_c.h  vcpkg.json
demo/: check_header.cpp  consumer.cpp  market_data.h  producer.cpp
include/: message_queue.h  message_types.h  ring_buffer.h
src/: consumer.cpp  message_queue.cpp  producer.cpp  ring_buffer.cpp
test/: test_no_create.cpp  test_ringbuffer.cpp
